finished the delete route. fixed the swagger.yaml a little bit
